--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5545,52 +5545,452 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e78ec4d-3d3f-484d-bbc3-51aa39308fab",
+   "cell_type": "markdown",
+   "id": "c8100d37-8811-4c9b-bc6a-3504fa0af978",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Sorting**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "54ff85b3-5b60-4d81-99b9-401abe3f30b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age gender        job\n",
+      "0  alice   19      F    student\n",
+      "1   john   26      M    student\n",
+      "2   eric   22      M    student\n",
+      "3   paul   58      F    manager\n",
+      "4  peter   33      M   engineer\n",
+      "5  julie   44      F  scientist\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    19\n",
+       "2    22\n",
+       "1    26\n",
+       "4    33\n",
+       "5    44\n",
+       "3    58\n",
+       "Name: age, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = users.copy()\n",
+    "print (df)\n",
+    "df.age.sort_values()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "66026e20-e987-4a2c-b93a-affa65d6698b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "0  alice   19      F    student\n",
+       "2   eric   22      M    student\n",
+       "1   john   26      M    student\n",
+       "4  peter   33      M   engineer\n",
+       "5  julie   44      F  scientist\n",
+       "3   paul   58      F    manager"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by = 'age')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "2e4620de-28b7-49d2-b30f-479008ef4d22",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "3   paul   58      F    manager\n",
+       "5  julie   44      F  scientist\n",
+       "4  peter   33      M   engineer\n",
+       "1   john   26      M    student\n",
+       "2   eric   22      M    student\n",
+       "0  alice   19      F    student"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.sort_values(by = 'age', ascending = False)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "aba2a18e-47b5-42c9-9ceb-6d21f1780c49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "3   paul   58      F    manager\n",
+       "5  julie   44      F  scientist\n",
+       "4  peter   33      M   engineer\n",
+       "1   john   26      M    student\n",
+       "2   eric   22      M    student\n",
+       "0  alice   19      F    student"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "cf0f7847-1a72-40e4-ac3c-60cd7d310aa1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "0   paul   58      F    manager\n",
+       "1  julie   44      F  scientist\n",
+       "2  peter   33      M   engineer\n",
+       "3   john   26      M    student\n",
+       "4   eric   22      M    student\n",
+       "5  alice   19      F    student"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by = 'age', ascending = False, inplace = True, ignore_index=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
