Pandas Classwork File

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -5994,67 +5994,568 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "id": "124ecc25-d550-44b2-b0c9-cd20b5f9702b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender       job\n",
+       "3   paul   58      F   manager\n",
+       "4  peter   33      M  engineer"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users[pd.Series([name[0] for name in users.name.tolist()]) == 'p']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "627efc88-c545-4ccb-9b9c-23883dc8f2e4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "0  peter   33      M   engineer\n",
+       "1   paul   58      F    manager\n",
+       "2  julie   44      F  scientist\n",
+       "3  alice   19      F    student\n",
+       "4   eric   22      M    student\n",
+       "5   john   26      M    student"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = users.copy()\n",
+    "df.sort_values(by = ['job', 'age'], inplace = True)\n",
+    "df.index = range(0, df.shape[0])\n",
+    "df"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f66a52b9-fc94-4ee3-b31a-8dbdb95befa9",
+   "cell_type": "markdown",
+   "id": "38fd4555-b86d-4915-ad8c-158b1217e97d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Unpivoting and Pivoting**"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "859a1ab2-d8fd-492b-84f5-ee79d1089e02",
+   "cell_type": "markdown",
+   "id": "f81426fd-5838-4e70-894a-d632d673d9fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Unpivot ->**  Wide format (Unstacked Format) to Long format (Stacked Format)<br>\n",
+    "**Pivot ->**    Long format (Stacked Format) to Wide format (Unstacked Format)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "b5fe46ec-bce1-458b-89cf-23b8c5d094bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>age</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john</td>\n",
+       "      <td>age</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>age</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>age</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>age</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>age</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>john</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>gender</td>\n",
+       "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>job</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>john</td>\n",
+       "      <td>job</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>job</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>job</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>job</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>job</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     name variable      value\n",
+       "0   alice      age         19\n",
+       "1    john      age         26\n",
+       "2    eric      age         22\n",
+       "3    paul      age         58\n",
+       "4   peter      age         33\n",
+       "5   julie      age         44\n",
+       "6   alice   gender          F\n",
+       "7    john   gender          M\n",
+       "8    eric   gender          M\n",
+       "9    paul   gender          F\n",
+       "10  peter   gender          M\n",
+       "11  julie   gender          F\n",
+       "12  alice      job    student\n",
+       "13   john      job    student\n",
+       "14   eric      job    student\n",
+       "15   paul      job    manager\n",
+       "16  peter      job   engineer\n",
+       "17  julie      job  scientist"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# performing the unpivot operation: Wide format to Long format\n",
+    "stacked = pd.melt(users, id_vars = \"name\", var_name = \"variable\", value_name = \"value\");\n",
+    "stacked"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "c744e665-ed34-4dd4-8dd9-b54046a3820b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>variable</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>alice</th>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>eric</th>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>john</th>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>julie</th>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>paul</th>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>peter</th>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "variable age gender        job\n",
+       "name                          \n",
+       "alice     19      F    student\n",
+       "eric      22      M    student\n",
+       "john      26      M    student\n",
+       "julie     44      F  scientist\n",
+       "paul      58      F    manager\n",
+       "peter     33      M   engineer"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unstacked = stacked.pivot(index = 'name', columns = \"variable\", values = \"value\");\n",
+    "unstacked"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "f9bebd18-09c6-4154-b6bc-2f1ccb0dbc7a",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0be583bf-dd28-4891-9879-7b8babe191da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name age gender        job\n",
+       "0  alice  19      F    student\n",
+       "1   eric  22      M    student\n",
+       "2   john  26      M    student\n",
+       "3  julie  44      F  scientist\n",
+       "4   paul  58      F    manager\n",
+       "5  peter  33      M   engineer"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unstacked.reset_index(inplace=True)\n",
+    "unstacked.columns.name = \"\"\n",
+    "unstacked"
+   ]
   },
   {
    "cell_type": "code",
