Pandas Classwork File

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -6667,7 +6667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 170,
    "id": "35af3b9c-dd07-49ee-8a60-95e9a587e3b3",
    "metadata": {},
    "outputs": [
@@ -6715,55 +6715,62 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>eric</td>\n",
-       "      <td>22</td>\n",
-       "      <td>M</td>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
        "      <td>student</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>eric</td>\n",
        "      <td>22</td>\n",
        "      <td>M</td>\n",
        "      <td>student</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>john</td>\n",
        "      <td>26</td>\n",
        "      <td>M</td>\n",
        "      <td>student</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>7</th>\n",
        "      <td>julie</td>\n",
        "      <td>44</td>\n",
        "      <td>F</td>\n",
        "      <td>scientist</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>paul</td>\n",
-       "      <td>58</td>\n",
-       "      <td>F</td>\n",
-       "      <td>manager</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>paul</td>\n",
-       "      <td>58</td>\n",
-       "      <td>F</td>\n",
-       "      <td>manager</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>peter</td>\n",
        "      <td>33</td>\n",
        "      <td>M</td>\n",
        "      <td>engineer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>peter</td>\n",
        "      <td>33</td>\n",
        "      <td>M</td>\n",
@@ -6774,31 +6781,156 @@
        "</div>"
       ],
       "text/plain": [
-       "    name  age gender        job\n",
-       "0  alice   19      F    student\n",
-       "1  alice   19      F    student\n",
-       "2   eric   22      M    student\n",
-       "3   eric   22      M    student\n",
-       "4   john   26      M    student\n",
-       "5  julie   44      F  scientist\n",
-       "6   paul   58      F    manager\n",
-       "7   paul   58      F    manager\n",
-       "8  peter   33      M   engineer\n",
-       "9  peter   33      M   engineer"
+       "     name  age gender        job\n",
+       "0   alice   19      F    student\n",
+       "1   alice   19      F    student\n",
+       "2   alice   19      F    student\n",
+       "3   alice   19      F    student\n",
+       "4    eric   22      M    student\n",
+       "5    eric   22      M    student\n",
+       "6    john   26      M    student\n",
+       "7   julie   44      F  scientist\n",
+       "8    paul   58      F    manager\n",
+       "9   peter   33      M   engineer\n",
+       "10  peter   33      M   engineer"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = users.copy()\n",
-    "df = df.append(df.iloc[0])\n",
-    "df = df.append(df.iloc[2])\n",
-    "df = df.append(df.iloc[4])\n",
-    "df = df.append(df.iloc[3], ignore_index=True)\n",
+    "df = pd.concat([df, df.loc[[0]]])\n",
+    "df = pd.concat([df, df.loc[[2]]])\n",
+    "df = pd.concat([df, df.loc[[4]]])\n",
+    "df = pd.concat([df, df.loc[[0]]], ignore_index=True)\n",
     "df.sort_values(by = \"name\", inplace = True, ignore_index=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "b1de8df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age gender        job\n",
+      "0  alice   19      F    student\n",
+      "1   john   26      M    student\n",
+      "2   eric   22      M    student\n",
+      "3   paul   58      F    manager\n",
+      "4  peter   33      M   engineer\n",
+      "5  julie   44      F  scientist\n",
+      "    name  age gender      job\n",
+      "0  alice   19      F  student\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>john</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>eric</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>paul</td>\n",
+       "      <td>58</td>\n",
+       "      <td>F</td>\n",
+       "      <td>manager</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>peter</td>\n",
+       "      <td>33</td>\n",
+       "      <td>M</td>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>julie</td>\n",
+       "      <td>44</td>\n",
+       "      <td>F</td>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>alice</td>\n",
+       "      <td>19</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    name  age gender        job\n",
+       "0  alice   19      F    student\n",
+       "1   john   26      M    student\n",
+       "2   eric   22      M    student\n",
+       "3   paul   58      F    manager\n",
+       "4  peter   33      M   engineer\n",
+       "5  julie   44      F  scientist\n",
+       "6  alice   19      F    student"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = users.copy()\n",
+    "df = pd.concat([df, df.loc[[0]]], ignore_index=True)\n",
     "df"
    ]
   },
@@ -7234,7 +7366,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "9df6c442",
+   "id": "af90636c",
    "metadata": {},
    "outputs": [
     {
@@ -7333,7 +7465,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f31f0d72",
+   "id": "8e3dd29e",
    "metadata": {},
    "outputs": [
     {
@@ -7362,7 +7494,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "76b8c351",
+   "id": "32afa5d1",
    "metadata": {},
    "outputs": [
     {
@@ -7469,7 +7601,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "c447c74e",
+   "id": "643a497b",
    "metadata": {},
    "outputs": [
     {
@@ -8608,7 +8740,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "3c9decba",
+   "id": "80e74990",
    "metadata": {},
    "outputs": [
     {
@@ -8957,7 +9089,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "ded9dd00",
+   "id": "a560d1df",
    "metadata": {},
    "outputs": [
     {
@@ -9261,7 +9393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08eb819e",
+   "id": "8caa9b51",
    "metadata": {},
    "outputs": [],
    "source": []
