Pandas Classwork File

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -9587,33 +9587,151 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02148d04-2994-4fc9-ba11-93bc63a1295e",
+   "cell_type": "markdown",
+   "id": "6d9fa0dc-7db9-48bd-9ec8-9df3b07026b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Groupby on DataFrame**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "25cd609b-8f17-4831-bad0-3d6302f36cd9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age gender        job\n",
+      "0  alice   19      F    student\n",
+      "1   john   26      M    student\n",
+      "2   eric   22      M    student\n",
+      "3   paul   58      F    manager\n",
+      "4  peter   33      M   engineer\n",
+      "5  julie   44      F  scientist\n",
+      "\n",
+      "Group name: F\n",
+      "    name  age gender        job\n",
+      "0  alice   19      F    student\n",
+      "3   paul   58      F    manager\n",
+      "5  julie   44      F  scientist\n",
+      "Group name: M\n",
+      "    name  age gender       job\n",
+      "1   john   26      M   student\n",
+      "2   eric   22      M   student\n",
+      "4  peter   33      M  engineer\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = users.copy()\n",
+    "print(df)\n",
+    "print()\n",
+    "for group, data_frame in users.groupby(\"gender\"):\n",
+    "    # print (type(group), type(data_frame))\n",
+    "    print (\"Group name:\", group)\n",
+    "    print (data_frame)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "2fffb8ae-ad7d-43fb-b0f1-41ca8db7dad9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age gender        job\n",
+      "0  alice   19      F    student\n",
+      "1   john   26      M    student\n",
+      "2   eric   22      M    student\n",
+      "3   paul   58      F    manager\n",
+      "4  peter   33      M   engineer\n",
+      "5  julie   44      F  scientist\n",
+      "\n",
+      "Group name: engineer\n",
+      "    name  age gender       job\n",
+      "4  peter   33      M  engineer\n",
+      "Group name: manager\n",
+      "   name  age gender      job\n",
+      "3  paul   58      F  manager\n",
+      "Group name: scientist\n",
+      "    name  age gender        job\n",
+      "5  julie   44      F  scientist\n",
+      "Group name: student\n",
+      "    name  age gender      job\n",
+      "0  alice   19      F  student\n",
+      "1   john   26      M  student\n",
+      "2   eric   22      M  student\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = users.copy()\n",
+    "print(df)\n",
+    "print()\n",
+    "for group, data_frame in users.groupby(\"job\"):\n",
+    "    # print (type(group), type(data_frame))\n",
+    "    print (\"Group name:\", group)\n",
+    "    print (data_frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "eb72656c-50c4-4120-b04a-86eb3f5ddefa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          age                    gender\n",
+      "          sum       mean max min  count\n",
+      "job                                    \n",
+      "engineer   33  33.000000  33  33      1\n",
+      "manager    58  58.000000  58  58      1\n",
+      "scientist  44  44.000000  44  44      1\n",
+      "student    67  22.333333  26  19      3\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_df = df.groupby('job').agg({'age':['sum', 'mean', 'max', 'min'], 'gender': 'count'});\n",
+    "print (grouped_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "a1513bad-8f21-4ccd-8387-01006aaf7606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        age                      job\n",
+      "        sum       mean max min count\n",
+      "gender                              \n",
+      "F       121  40.333333  58  19     3\n",
+      "M        81  27.000000  33  22     3\n"
+     ]
+    }
+   ],
+   "source": [
+    "grouped_df = df.groupby('gender').agg({'age':['sum', 'mean', 'max', 'min'], 'job': ['count']});\n",
+    "print (grouped_df)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587a08aa-8656-41c2-a9f3-5505ed75e5c0",
+   "id": "8a9be7ad-1985-4ffd-a958-1bc1e6add131",
    "metadata": {},
    "outputs": [],
    "source": []
